# NebulaGameEngine

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: macos.yml
Assets/: Nebula.icns
Engine/Assets/: Asset.h  AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetTypes.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
Engine/Audio/: AudioEngine.cpp  AudioEngine.h  Music.cpp  Music.h  Sound.cpp  Sound.h
Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timestep.h  Window.cpp  Window.h
Engine/Input/: Gamepad.h  Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Engine/Physics/: Collider2D.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody2D.cpp  RigidBody2D.h
Engine/Renderer/: Camera.h  IndexBuffer.h  OrthoGraficCamera.cpp  OrthoGraficCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.h  Texture2D.h  VertexArray.h  VertexBuffer.h
Engine/Scene/: CameraComponent.h  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SpriteRendererComponent.h  TagComponent.h  TransformComponent.h
